--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     ""
   ],
   "dependencies" : {
+    "sax": "0.4.0",
     "xmlhttprequest": "1.4.2"
   },
   "devDependencies": {
     "mocha": "~1.1",
     "chai": "~1.0",
-    "sax": "0.4.0"
+    "test-agent": "~0.6"
   },
   "license": "MIT",
   "engine": {
