--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "mocha": "~1.1",
     "chai": "~1.0",
-    "test-agent": "~0.6"
+    "test-agent": "~0.6",
+    "http-proxy": "~0.8"
   },
   "license": "MIT",
   "engine": {
