--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "devDependencies": {
     "debug": "~0.7",
-    "mocha": "~1.1",
+    "mocha": "~1.7",
     "chai": "~1.0",
-    "test-agent": "~0.6",
+    "test-agent": "~0.10",
     "http-proxy": "~0.8",
-    "commander": "~1.0"
+    "commander": "~1.0",
+    "sinon": "~1.6"
   },
   "license": "MIT",
   "engine": {
